--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: "CS371p Fall 2015: Joaquin Casaubon"
 description: Developer from UT Austin
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars2.githubusercontent.com/u/10780345?v=3&s=460
+avatar: http://ace-jc.github.io/images/Joaquin_Casaubon.JPG
 
 #
 # Flags below are optional
