--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: "CS371p Fall 2015: Joaquin Casaubon"
 
 # Short bio or description (displayed in the header)
-description: Developer from UT Austin
+description: CS Student from UT Austin
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: http://ace-jc.github.io/images/Joaquin_Casaubon.JPG
