--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: https://github.com/ace-jc/
+  github: ace-jc/
   instagram:
   linkedin:
   pinterest:
